Extracted code from Notebook to plotting_utils.py

--- a/Interactive-Notebook.ipynb
+++ b/Interactive-Notebook.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 2,
    "id": "18c07804",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "457a5519",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 4,
    "id": "1d94e4b8",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        "                                trace         100.0   99.9  10.62"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,11 +237,8 @@
     "# Compute the percentage of finished requests for each app\n",
     "percentage_pivot = data.pivot_table(\n",
     "    index=['queue_size', 'termination', 'LB', 'distribution'],\n",
-    "    columns='app', \n",
-    "    values='finished',\n",
-    "    aggfunc=lambda x: x.sum() / len(x) * 100,\n",
-    "    fill_value=0\n",
-    ").round(1)\n",
+    "    columns='app', values='finished', aggfunc=lambda x: x.sum() / len(x) * 100,\n",
+    "    fill_value=0).round(1)\n",
     "\n",
     "# Append the cost of each experiment\n",
     "cost_summary = data.groupby(['queue_size', 'termination', 'LB', 'distribution'])['cost'].first()\n",
@@ -260,222 +257,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "id": "aefc599d",
+   "execution_count": 5,
+   "id": "5200fa99",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code for plotting\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import matplotlib.dates as mdates\n",
-    "from typing import Optional\n",
-    "from matplotlib.patches import Patch\n",
-    "\n",
-    "\n",
-    "def filter_data(data_df, experiment=None):\n",
-    "    if experiment is not None:\n",
-    "        data_df = data_df[data_df[\"experiment\"] == experiment]\n",
-    "    return data_df\n",
-    "\n",
-    "def select_experiment_df(data, distribution, termination, lb, queue_size):\n",
-    "    selected_experiment_name = (\n",
-    "        f\"{distribution}_\"\n",
-    "        f\"{termination}_\"\n",
-    "        f\"{lb}_\"\n",
-    "        f\"{queue_size}\"\n",
-    "    )\n",
-    "    selected_data = filter_data(data, experiment=selected_experiment_name)\n",
-    "    return selected_data\n",
-    "\n",
-    "def plot_workloads(data, case: str, aggregate_time=\"1s\", ax=None):\n",
-    "    selected_data = select_experiment_df(data, case, \"hard\", \"simple\", \"q0\")\n",
-    "    _df_injected_per_second = selected_data.set_index('injected')\n",
-    "    requests_per_second = (_df_injected_per_second.groupby(\"app\")[\"app\"]\n",
-    "                           .resample('1s').size()\n",
-    "                           .reset_index(name='request_count'))\n",
-    "\n",
-    "    _requests_per_second_indexed = requests_per_second.set_index('injected')\n",
-    "\n",
-    "    # Group per app\n",
-    "    max_requests_per_minute = (_requests_per_second_indexed.groupby(\"app\")[\"request_count\"]\n",
-    "                               .resample(aggregate_time).mean()\n",
-    "                               .reset_index(name='requests'))\n",
-    "\n",
-    "    # Create the plot\n",
-    "    if ax is None:\n",
-    "        fig, ax = plt.subplots(figsize=(12, 6))\n",
-    "        show_standalone = True\n",
-    "    else:\n",
-    "        fig = ax.figure\n",
-    "        show_standalone = False\n",
-    "    sns.lineplot(\n",
-    "        data=max_requests_per_minute,\n",
-    "        x='injected',\n",
-    "        y='requests',\n",
-    "        hue='app',\n",
-    "        linewidth=1.5,\n",
-    "        alpha=0.8,\n",
-    "        ax=ax\n",
-    "    )\n",
-    "\n",
-    "    # Show only HH:MM in the x-axis\n",
-    "    ax.xaxis.set_major_formatter(mdates.DateFormatter('%H:%M'))\n",
-    "    \n",
-    "    ax.set_title(f\"Average workload for the '{case}' injector, window size of {aggregate_time}\")\n",
-    "    ax.set_xlabel('Time')\n",
-    "    ax.set_ylabel('Requests')\n",
-    "    ax.grid(True, linestyle='--', alpha=0.6)\n",
-    "    if show_standalone:\n",
-    "        plt.tight_layout() \n",
-    "        plt.show()\n",
-    "    return ax\n",
-    "\n",
-    "def plot_response_time(data, distribution:str, termination:str, lb:str, queue_size:str,\n",
-    "                       app:Optional[str]=None, grouper:Optional[str]=None, \n",
-    "                       avg_window: str = \"60s\",\n",
-    "                       ax=None):\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    This function selects one experiment data and plots a line chart\n",
-    "    with error bars showing the average response time per time bin,\n",
-    "    grouped by the specified grouper (app or container).\n",
-    "    \"\"\"    \n",
-    "    selected_data = select_experiment_df(data, distribution, termination, lb, queue_size)\n",
-    "    if app is not None:\n",
-    "        selected_data = selected_data[selected_data['app'] == app]\n",
-    "    if grouper is None:\n",
-    "        grouper = \"app\"\n",
-    "    if ax is None:\n",
-    "        fig, ax = plt.subplots(figsize=(12, 6))\n",
-    "        show_standalone = True\n",
-    "    df_rt = selected_data.copy().query('finished==True')\n",
-    "    df_rt['time_bin'] = df_rt['injected'].dt.floor(avg_window)\n",
-    "\n",
-    "\n",
-    "    sns.lineplot(\n",
-    "        data=df_rt,\n",
-    "        x='time_bin',\n",
-    "        y='response_time',\n",
-    "        hue=grouper,\n",
-    "        linewidth=2,\n",
-    "        marker='o',\n",
-    "        alpha=0.5,\n",
-    "        errorbar=('ci', 95),\n",
-    "        ax=ax\n",
-    "    )\n",
-    "    ax.ticklabel_format(style='plain', axis='y')\n",
-    "    if grouper == \"app\":\n",
-    "        to_title = \"per application\"\n",
-    "        legend_title = \"Application\"\n",
-    "    else:\n",
-    "        to_title = \"per container\"\n",
-    "        legend_title = \"Container type\"\n",
-    "    ax.yaxis.set_major_formatter(plt.FuncFormatter(lambda x, _: f'{x:.2f}'))\n",
-    "    ax.xaxis.set_major_formatter(mdates.DateFormatter('%H:%M'))\n",
-    "    title = f'Average response time {to_title} for scenario <{distribution}, {termination}, {lb}, {queue_size}>'\n",
-    "    ax.set_title(title)\n",
-    "    ax.set_ylabel(f'Average Response Time ({avg_window} window)')\n",
-    "    ax.grid(True, linestyle='--', alpha=0.6)\n",
-    "    ax.legend(title=legend_title, bbox_to_anchor=(1.05, 1), loc='upper left')    \n",
-    "    return ax\n",
-    "\n",
-    "def plot_requests_success(data, distribution:str, termination:str, lb:str, queue_size:str,\n",
-    "                       app:Optional[str]=None, grouper:Optional[str]=None, \n",
-    "                       avg_window: str = \"60s\",\n",
-    "                       ax=None):\n",
-    "    \"\"\"\n",
-    "    This function selects one experiment data and plots a stacked bar chart\n",
-    "    showing the number of completed and lost requests per time bin, \n",
-    "    grouped by the specified grouper (app or container)\n",
-    "    \"\"\"\n",
-    "\n",
-    "    selected_data = select_experiment_df(data, distribution, termination, lb, queue_size)\n",
-    "    if app is not None:\n",
-    "        selected_data = selected_data[selected_data['app'] == app]\n",
-    "    if grouper is None:\n",
-    "        grouper = \"app\"\n",
-    "    \n",
-    "    if ax is None:\n",
-    "        fig, ax = plt.subplots(figsize=(15, 7))\n",
-    "        show_standalone = True\n",
-    "    else:\n",
-    "        fig = ax.figure\n",
-    "        show_standalone = False\n",
-    "\n",
-    "    # Group per time bin and grouper\n",
-    "    df_agg = selected_data.copy()\n",
-    "    df_agg['time_bin'] = df_agg['injected'].dt.floor(avg_window)\n",
-    "    requests_counts = df_agg.pivot_table(\n",
-    "        index='time_bin',\n",
-    "        columns=[grouper, 'finished'],\n",
-    "        values='experiment',\n",
-    "        aggfunc='count',\n",
-    "        fill_value=0\n",
-    "    )\n",
-    "    \n",
-    "    if requests_counts.empty:\n",
-    "        ax.text(0.5, 0.5, \"No data for this selection\", ha='center', va='center')\n",
-    "        return ax\n",
-    "\n",
-    "    requests_counts = requests_counts.sort_index(axis=1, level=['finished', grouper], ascending=[False, True])\n",
-    "\n",
-    "    # Custom colours and legend.\n",
-    "    # Completed requests will be green, lost requests will be red.\n",
-    "    unique_groups = sorted(requests_counts.columns.get_level_values(grouper).unique())\n",
-    "    n_groups = len(unique_groups)\n",
-    "    red_palette = sns.color_palette(\"Reds_d\", n_groups)\n",
-    "    green_palette = sns.color_palette(\"Greens_d\", n_groups)\n",
-    "    group_to_red = dict(zip(unique_groups, red_palette))\n",
-    "    group_to_green = dict(zip(unique_groups, green_palette))\n",
-    "\n",
-    "    # Bars are drawn using low-level matplotlib API, instead of pandas.bar\n",
-    "    # to allow for custom stacking and xlabel tick formatting.\n",
-    "    width_in_seconds = pd.to_timedelta(avg_window).total_seconds()\n",
-    "    width_in_days = (width_in_seconds / (24 * 3600)) * 0.8\n",
-    "\n",
-    "    # Lógica de apilado\n",
-    "    bottom_executed = pd.Series(0, index=requests_counts.index, dtype='float64')\n",
-    "    executed_cols = [col for col in requests_counts.columns if col[1] is True]\n",
-    "    bottom_lost_start = requests_counts[executed_cols].sum(axis=1) if executed_cols else pd.Series(0, index=requests_counts.index, dtype='float64')\n",
-    "    bottom_lost = bottom_lost_start.copy()\n",
-    "\n",
-    "    for (group, status), series in requests_counts.items():\n",
-    "        if status:  # Executed\n",
-    "            color = group_to_green[group]\n",
-    "            ax.bar(series.index, series.values, bottom=bottom_executed.values, width=width_in_days, color=color, align='edge')\n",
-    "            bottom_executed += series.values\n",
-    "        else:  # Lost\n",
-    "            color = group_to_red[group]\n",
-    "            ax.bar(series.index, series.values, bottom=bottom_lost.values, width=width_in_days, color=color, align='edge')\n",
-    "            bottom_lost += series.values\n",
-    "\n",
-    "    title = f'Executed vs Lost Requests per {grouper} for scenario <{distribution}, {termination}, {lb}, {queue_size}>'\n",
-    "    ax.set_title(title)\n",
-    "    ax.set_ylabel(\"Number of Requests\")\n",
-    "    ax.set_xlabel(\"Time\")\n",
-    "    \n",
-    "    # --- Formateo del Eje X ---\n",
-    "    ## ax.xaxis.set_major_locator(mdates.MinuteLocator(by_minute=10))\n",
-    "    ax.xaxis.set_major_formatter(mdates.DateFormatter('%H:%M'))\n",
-    "    # fig.autofmt_xdate()\n",
-    "\n",
-    "    # --- Creación de Leyenda Manual ---\n",
-    "    legend_handles = []\n",
-    "    for group in unique_groups:\n",
-    "        legend_handles.append(Patch(color=group_to_green[group], label=f\"{group} | Completed\"))\n",
-    "    for group in unique_groups:\n",
-    "        legend_handles.append(Patch(color=group_to_red[group], label=f\"{group} | Lost\"))\n",
-    "        \n",
-    "    ax.legend(handles=legend_handles, title=f\"{grouper} | Status\", bbox_to_anchor=(1.02, 1), loc='upper left')\n",
-    "\n",
-    "    ax.grid(axis='y', linestyle='--', alpha=0.7)\n",
-    "    \n",
-    "    if show_standalone:\n",
-    "        plt.tight_layout()\n",
-    "        plt.show()\n",
-    "        \n",
-    "    return ax\n"
+    "import plotting_utils as pu\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -488,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 6,
    "id": "591ed7d2",
    "metadata": {},
    "outputs": [
@@ -516,19 +304,15 @@
    "source": [
     "# Generate plots for injected requests in the two cases of injectors\n",
     "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(16, 4), sharey=True)\n",
-    "\n",
-    "plot_workloads(data, \"poisson\", \"1min\", ax=ax1)\n",
-    "plot_workloads(data, \"trace\", \"1min\", ax=ax2)\n",
+    "pu.plot_workloads(data, \"poisson\", \"1min\", ax=ax1)\n",
+    "pu.plot_workloads(data, \"trace\", \"1min\", ax=ax2)\n",
     "ax2.tick_params(axis='y', labelleft=True) \n",
-    "# fig.savefig(\"plots/workloads_1min.png\", dpi=300, bbox_inches='tight')\n",
     "\n",
     "# Generate also plots for 1s window\n",
     "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(16, 4), sharey=True)\n",
-    "plot_workloads(data, \"poisson\", \"1s\", ax=ax1)\n",
-    "plot_workloads(data, \"trace\", \"1s\", ax=ax2)\n",
-    "ax2.tick_params(axis='y', labelleft=True) \n",
-    "# fig.savefig(\"plots/workloads_1s.png\", dpi=300, bbox_inches='tight')\n",
-    "\n"
+    "pu.plot_workloads(data, \"poisson\", \"1s\", ax=ax1)\n",
+    "pu.plot_workloads(data, \"trace\", \"1s\", ax=ax2)\n",
+    "ax2.tick_params(axis='y', labelleft=True) "
    ]
   },
   {
@@ -540,8 +324,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "13fd3f6f",
+   "metadata": {},
+   "source": [
+    "Note. This section of the notebook is not visible via GitHub, which does not render the `ipywidgets` components.\n",
+    "\n",
+    "To view this secition, you need to run the notebook locally.\n",
+    "\n",
+    "You can look at the companion notebook `Static-Notebook.ipynb` which contains some pre-rendered example plots.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 7,
    "id": "0cb4dabf",
    "metadata": {},
    "outputs": [],
@@ -606,7 +402,7 @@
     "        app = app_selector_j.value if app_selector_j.value != \"all\" else None\n",
     "        \n",
     "        fig, ax = plt.subplots(figsize=(12, 6))\n",
-    "        plot_response_time(\n",
+    "        pu.plot_response_time(\n",
     "            data,\n",
     "            distribution=distribution_selector_j.value,\n",
     "            termination=termination_selector_j.value,\n",
@@ -626,7 +422,7 @@
     "        app = app_selector_j.value if app_selector_j.value != \"all\" else None\n",
     "\n",
     "        fig, ax = plt.subplots(figsize=(15, 7))\n",
-    "        plot_requests_success(\n",
+    "        pu.plot_requests_success(\n",
     "            data,\n",
     "            distribution=distribution_selector_j.value,\n",
     "            termination=termination_selector_j.value,\n",
@@ -653,14 +449,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 8,
    "id": "ca8903ee",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98945cfe1f74411983e507df0b5f2e13",
+       "model_id": "f7199edbd36a4f269997e96e0c2dd82f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -674,7 +470,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e9dfe2463af4edb9e190126508e3688",
+       "model_id": "99225c8e74ad4e93be2260f21ab18c52",
        "version_major": 2,
        "version_minor": 0
       },
@@ -701,14 +497,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 9,
    "id": "22beabc7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df04dbe299164988ac9a27c6f67b4522",
+       "model_id": "bd471d5cca4d40d3adec03b016365b3f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -722,7 +518,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "691fc2ecea9a4607ab0fb91ea8020c19",
+       "model_id": "513709efc8a246d1b2dcd7063b5d5214",
        "version_major": 2,
        "version_minor": 0
       },
@@ -749,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 10,
    "id": "16ad3070",
    "metadata": {},
    "outputs": [
