README expanded, notebooks prepared for publishing

--- a/Interactive-Notebook.ipynb
+++ b/Interactive-Notebook.ipynb
@@ -18,9 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "18c07804",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "data_file = \"../nuberu-starter-lab/notebooks/all_requests_data.parquet\""
@@ -28,9 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "457a5519",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Read parquet file\n",
@@ -50,9 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1d94e4b8",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -228,7 +240,7 @@
        "                                trace         100.0   99.9  10.62"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,9 +269,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5200fa99",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import plotting_utils as pu\n",
@@ -276,9 +292,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "591ed7d2",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -337,9 +357,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "0cb4dabf",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Setup for interactive widgets\n",
@@ -449,14 +473,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "ca8903ee",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7199edbd36a4f269997e96e0c2dd82f",
+       "model_id": "e55ace8e7a6d46acbe9e1efb839ef005",
        "version_major": 2,
        "version_minor": 0
       },
@@ -470,7 +494,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99225c8e74ad4e93be2260f21ab18c52",
+       "model_id": "93b2c97ce05e425bba453bf709632675",
        "version_major": 2,
        "version_minor": 0
       },
@@ -497,14 +521,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "22beabc7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd471d5cca4d40d3adec03b016365b3f",
+       "model_id": "f8a0e06b49244fc8b7837ca24a05c915",
        "version_major": 2,
        "version_minor": 0
       },
@@ -518,7 +542,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "513709efc8a246d1b2dcd7063b5d5214",
+       "model_id": "5be1df8bd37e42dc86db77db87c18693",
        "version_major": 2,
        "version_minor": 0
       },
@@ -545,9 +569,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "16ad3070",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -629,11 +660,19 @@
     "        result_lines.append(_line)\n",
     "print(\"\\n\".join(result_lines))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d45662bb-ce80-4247-b2af-638820fcdbaa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
