Updated notebooks for the latest experiments
- Replaced "random weighted" LB by "Smooth Weighted Round Robin" LB

--- a/Interactive-Notebook.ipynb
+++ b/Interactive-Notebook.ipynb
@@ -18,13 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "18c07804",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data_file = \"../nuberu-starter-lab/notebooks/all_requests_data.parquet\""
@@ -32,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "457a5519",
    "metadata": {
     "jupyter": {
@@ -44,7 +40,17 @@
     "# Read parquet file\n",
     "import pandas as pd\n",
     "data = pd.read_parquet(data_file)\n",
-    "data['injected'] = pd.to_datetime(data['injected'], unit='s', origin='2025-06-24 09:00:00')"
+    "data['injected'] = pd.to_datetime(data['injected'], unit='s', origin='2025-06-24 09:00:00')\n",
+    "data['LB'] = data['LB'].replace({\n",
+    "    'smoothWRR': \"SWRR\",\n",
+    "    \"simple\": \"RR\"\n",
+    "})\n",
+    "\n",
+    "# Apply a function to every value in the \"experiment\" column\n",
+    "data['experiment'] = data['experiment'].apply(lambda x: \n",
+    "                                              x.replace(\"smoothWRR\", \"SWRR\")\n",
+    "                                              .replace(\"simple\", \"RR\")\n",
+    ")"
    ]
   },
   {
@@ -58,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "1d94e4b8",
    "metadata": {
     "jupyter": {
@@ -108,7 +114,7 @@
        "    <tr>\n",
        "      <th rowspan=\"8\" valign=\"top\">0</th>\n",
        "      <th rowspan=\"4\" valign=\"top\">drain</th>\n",
-       "      <th rowspan=\"2\" valign=\"top\">simple</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">RR</th>\n",
        "      <th>poisson</th>\n",
        "      <td>68.4</td>\n",
        "      <td>68.1</td>\n",
@@ -121,21 +127,21 @@
        "      <td>10.63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">weighted</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">SWRR</th>\n",
        "      <th>poisson</th>\n",
-       "      <td>51.7</td>\n",
-       "      <td>50.1</td>\n",
+       "      <td>68.4</td>\n",
+       "      <td>66.6</td>\n",
        "      <td>10.65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>trace</th>\n",
-       "      <td>55.7</td>\n",
-       "      <td>53.7</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>94.4</td>\n",
        "      <td>10.63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"4\" valign=\"top\">hard</th>\n",
-       "      <th rowspan=\"2\" valign=\"top\">simple</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">RR</th>\n",
        "      <th>poisson</th>\n",
        "      <td>68.4</td>\n",
        "      <td>68.1</td>\n",
@@ -148,22 +154,22 @@
        "      <td>10.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">weighted</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">SWRR</th>\n",
        "      <th>poisson</th>\n",
-       "      <td>51.7</td>\n",
-       "      <td>50.0</td>\n",
+       "      <td>68.4</td>\n",
+       "      <td>66.6</td>\n",
        "      <td>10.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>trace</th>\n",
-       "      <td>55.7</td>\n",
-       "      <td>53.7</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>94.3</td>\n",
        "      <td>10.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"8\" valign=\"top\">1000</th>\n",
        "      <th rowspan=\"4\" valign=\"top\">drain</th>\n",
-       "      <th rowspan=\"2\" valign=\"top\">simple</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">RR</th>\n",
        "      <th>poisson</th>\n",
        "      <td>100.0</td>\n",
        "      <td>99.6</td>\n",
@@ -176,21 +182,21 @@
        "      <td>16.53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">weighted</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">SWRR</th>\n",
        "      <th>poisson</th>\n",
        "      <td>100.0</td>\n",
        "      <td>100.0</td>\n",
-       "      <td>11.09</td>\n",
+       "      <td>10.66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>trace</th>\n",
        "      <td>100.0</td>\n",
        "      <td>100.0</td>\n",
-       "      <td>10.65</td>\n",
+       "      <td>10.63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"4\" valign=\"top\">hard</th>\n",
-       "      <th rowspan=\"2\" valign=\"top\">simple</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">RR</th>\n",
        "      <th>poisson</th>\n",
        "      <td>100.0</td>\n",
        "      <td>99.1</td>\n",
@@ -203,16 +209,16 @@
        "      <td>10.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">weighted</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">SWRR</th>\n",
        "      <th>poisson</th>\n",
        "      <td>100.0</td>\n",
-       "      <td>98.8</td>\n",
+       "      <td>100.0</td>\n",
        "      <td>10.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>trace</th>\n",
        "      <td>100.0</td>\n",
-       "      <td>99.9</td>\n",
+       "      <td>100.0</td>\n",
        "      <td>10.62</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -220,34 +226,35 @@
        "</div>"
       ],
       "text/plain": [
-       "                                               app0   app1   cost\n",
-       "queue_size termination LB       distribution                     \n",
-       "0          drain       simple   poisson        68.4   68.1  10.65\n",
-       "                                trace         100.0   98.5  10.63\n",
-       "                       weighted poisson        51.7   50.1  10.65\n",
-       "                                trace          55.7   53.7  10.63\n",
-       "           hard        simple   poisson        68.4   68.1  10.62\n",
-       "                                trace         100.0   98.5  10.62\n",
-       "                       weighted poisson        51.7   50.0  10.62\n",
-       "                                trace          55.7   53.7  10.62\n",
-       "1000       drain       simple   poisson       100.0   99.6  16.55\n",
-       "                                trace         100.0   99.8  16.53\n",
-       "                       weighted poisson       100.0  100.0  11.09\n",
-       "                                trace         100.0  100.0  10.65\n",
-       "           hard        simple   poisson       100.0   99.1  10.62\n",
-       "                                trace         100.0   99.2  10.62\n",
-       "                       weighted poisson       100.0   98.8  10.62\n",
-       "                                trace         100.0   99.9  10.62"
+       "                                           app0   app1   cost\n",
+       "queue_size termination LB   distribution                     \n",
+       "0          drain       RR   poisson        68.4   68.1  10.65\n",
+       "                            trace         100.0   98.5  10.63\n",
+       "                       SWRR poisson        68.4   66.6  10.65\n",
+       "                            trace         100.0   94.4  10.63\n",
+       "           hard        RR   poisson        68.4   68.1  10.62\n",
+       "                            trace         100.0   98.5  10.62\n",
+       "                       SWRR poisson        68.4   66.6  10.62\n",
+       "                            trace         100.0   94.3  10.62\n",
+       "1000       drain       RR   poisson       100.0   99.6  16.55\n",
+       "                            trace         100.0   99.8  16.53\n",
+       "                       SWRR poisson       100.0  100.0  10.66\n",
+       "                            trace         100.0  100.0  10.63\n",
+       "           hard        RR   poisson       100.0   99.1  10.62\n",
+       "                            trace         100.0   99.2  10.62\n",
+       "                       SWRR poisson       100.0  100.0  10.62\n",
+       "                            trace         100.0  100.0  10.62"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Compute the percentage of finished requests for each app\n",
-    "percentage_pivot = data.pivot_table(\n",
+    "filtered_data = data[data['LB'] != 'WRand']\n",
+    "percentage_pivot = filtered_data.pivot_table(\n",
     "    index=['queue_size', 'termination', 'LB', 'distribution'],\n",
     "    columns='app', values='finished', aggfunc=lambda x: x.sum() / len(x) * 100,\n",
     "    fill_value=0).round(1)\n",
@@ -269,13 +276,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "5200fa99",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import plotting_utils as pu\n",
@@ -292,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "591ed7d2",
    "metadata": {
     "jupyter": {
@@ -357,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "0cb4dabf",
    "metadata": {
     "jupyter": {
@@ -372,14 +375,14 @@
     "\n",
     "distribution_options = [\"trace\", \"poisson\"]\n",
     "termination_options = [\"hard\", \"drain\"]\n",
-    "lb_options = [\"weighted\", \"simple\"]\n",
+    "lb_options = [\"RR\", \"SWRR\"]\n",
     "queue_size_options = [\"q1000\", \"q0\"]\n",
     "app_options = [\"app0\", \"app1\", \"all\"]\n",
     "plot_options = [\"per app\", \"per container\"]\n",
     "\n",
     "distribution_selector_j = Dropdown(options=distribution_options, value=\"trace\", description=\"Distribution\")\n",
     "termination_selector_j = Dropdown(options=termination_options, value=\"drain\", description=\"Termination\")\n",
-    "lb_selector_j = Dropdown(options=lb_options, value=\"weighted\", description=\"LB\")\n",
+    "lb_selector_j = Dropdown(options=lb_options, value=\"SWRR\", description=\"LB\")\n",
     "queue_selector_j = Dropdown(options=queue_size_options, value=\"q1000\", description=\"Q\")\n",
     "app_selector_j = Dropdown(options=app_options, value=\"all\", description=\"App\")\n",
     "plot_selector_j = Dropdown(options=plot_options, value=\"per app\", description=\"Plot kind\")\n",
@@ -473,14 +476,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "ca8903ee",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e55ace8e7a6d46acbe9e1efb839ef005",
+       "model_id": "e26ce83a592e40eebcc76523b8197090",
        "version_major": 2,
        "version_minor": 0
       },
@@ -494,7 +497,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93b2c97ce05e425bba453bf709632675",
+       "model_id": "ad51f3e1f87a4cb0ad7b4c4888b02f3c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -507,7 +510,6 @@
     }
    ],
    "source": [
-    "#\n",
     "display(controls1, output_area1)"
    ]
   },
@@ -521,14 +523,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "22beabc7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8a0e06b49244fc8b7837ca24a05c915",
+       "model_id": "a2ae0d3616734064b1594e201ee27a44",
        "version_major": 2,
        "version_minor": 0
       },
@@ -542,7 +544,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5be1df8bd37e42dc86db77db87c18693",
+       "model_id": "db5a0c781c0d4d0f91b778ac8e78c2ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -555,7 +557,6 @@
     }
    ],
    "source": [
-    "#\n",
     "display(controls2, output_area2)"
    ]
   },
@@ -569,12 +570,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "16ad3070",
    "metadata": {
-    "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     },
     "scrolled": true
@@ -593,32 +592,32 @@
       " &  &  & trace & 100.0\\% & 98.5\\% & \\$10.63 \\\\\n",
       "\\cline{3-7}\n",
       "\\addlinespace\n",
-      " &  & \\multirow[t]{2}{*}{WR} & poisson & 51.7\\% & 50.1\\% & \\$10.65 \\\\\n",
-      " &  &  & trace & 55.7\\% & 53.7\\% & \\$10.63 \\\\\n",
+      " &  & \\multirow[t]{2}{*}{SWRR} & poisson & 68.4\\% & 66.6\\% & \\$10.65 \\\\\n",
+      " &  &  & trace & 100.0\\% & 94.4\\% & \\$10.63 \\\\\n",
       "\\cline{2-7}\n",
       "\\addlinespace\n",
       " & \\multirow[t]{4}{*}{hard} & \\multirow[t]{2}{*}{RR} & poisson & 68.4\\% & 68.1\\% & \\$10.62 \\\\\n",
       " &  &  & trace & 100.0\\% & 98.5\\% & \\$10.62 \\\\\n",
       "\\cline{3-7}\n",
       "\\addlinespace\n",
-      " &  & \\multirow[t]{2}{*}{WR} & poisson & 51.7\\% & 50.0\\% & \\$10.62 \\\\\n",
-      " &  &  & trace & 55.7\\% & 53.7\\% & \\$10.62 \\\\\n",
+      " &  & \\multirow[t]{2}{*}{SWRR} & poisson & 68.4\\% & 66.6\\% & \\$10.62 \\\\\n",
+      " &  &  & trace & 100.0\\% & 94.3\\% & \\$10.62 \\\\\n",
       "\\cline{1-7}\n",
       "\\addlinespace\n",
       "\\multirow[t]{8}{*}{1000} & \\multirow[t]{4}{*}{drain} & \\multirow[t]{2}{*}{RR} & poisson & 100.0\\% & 99.6\\% & \\$16.55 \\\\\n",
       " &  &  & trace & 100.0\\% & 99.8\\% & \\$16.53 \\\\\n",
       "\\cline{3-7}\n",
       "\\addlinespace\n",
-      " &  & \\multirow[t]{2}{*}{WR} & poisson & 100.0\\% & 100.0\\% & \\$11.09 \\\\\n",
-      " &  &  & trace & 100.0\\% & 100.0\\% & \\$10.65 \\\\\n",
+      " &  & \\multirow[t]{2}{*}{SWRR} & poisson & 100.0\\% & 100.0\\% & \\$10.66 \\\\\n",
+      " &  &  & trace & 100.0\\% & 100.0\\% & \\$10.63 \\\\\n",
       "\\cline{2-7}\n",
       "\\addlinespace\n",
       " & \\multirow[t]{4}{*}{hard} & \\multirow[t]{2}{*}{RR} & poisson & 100.0\\% & 99.1\\% & \\$10.62 \\\\\n",
       " &  &  & trace & 100.0\\% & 99.2\\% & \\$10.62 \\\\\n",
       "\\cline{3-7}\n",
       "\\addlinespace\n",
-      " &  & \\multirow[t]{2}{*}{WR} & poisson & 100.0\\% & 98.8\\% & \\$10.62 \\\\\n",
-      " &  &  & trace & 100.0\\% & 99.9\\% & \\$10.62 \\\\\n",
+      " &  & \\multirow[t]{2}{*}{SWRR} & poisson & 100.0\\% & 100.0\\% & \\$10.62 \\\\\n",
+      " &  &  & trace & 100.0\\% & 100.0\\% & \\$10.62 \\\\\n",
       "\\cline{1-7}\n",
       "\\addlinespace\n",
       "\\end{tabular}\n",
